--- a/duties/before.html
+++ b/duties/before.html
@@ -67,7 +67,7 @@
   @font-face {
     font-family: "masmak";
 
-    src: url('/assets/masmak.ttf');
+    src: url('/kamcplatform/assets/masmak.ttf');
 }
 
 * {
@@ -438,7 +438,7 @@ br {
           </div>
           <!-- Logo Section -->
           <div class="footer-logo">
-              <img onclick="location.href='/'" src="/kamcplatform/assets/logo.png">
+              <img onclick="location.href='/kacmplatform/index.html'" src="/kamcplatform/assets/logo.png">
                 </div>
 
       </div>
