--- a/duties/bylevels.html
+++ b/duties/bylevels.html
@@ -68,7 +68,7 @@
   @font-face {
     font-family: "masmak";
 
-    src: url('/assets//masmak.ttf');
+    src: url('/kamcplatform/assets//masmak.ttf');
 }
 
 * {
@@ -402,7 +402,7 @@ br {
           </div>
           <!-- Logo Section -->
           <div class="footer-logo">
-              <img onclick="location.href='/'" src="/kamcplatform/assets/logo.png">
+              <img onclick="location.href='/kamcplatform/'" src="/kamcplatform/assets/logo.png">
                 </div>
 
       </div>
