--- a/duties/bystation.html
+++ b/duties/bystation.html
@@ -73,7 +73,7 @@
   @font-face {
     font-family: "masmak";
 
-    src: url('/assets//masmak.ttf');
+    src: url('/kamcplatform/assets//masmak.ttf');
 }
 
 * {
