--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="/kamcplatform/about/">عن المشروع</a>
           </li>
         </ul>
-        <img onclick="location.href='/'" src="/kamcplatform/assets/logo.png" class="logo"></img>
+        <img onclick="location.href='/kamcplatform/index.html'" src="/kamcplatform/assets/logo.png" class="logo"></img>
       </nav>
       
     </header>
@@ -109,9 +109,9 @@
 
 
     <div class="buttons-container">
-        <button onclick="location.href='/'" class="button1">الإسعافات الأولية</button>
-        <button onclick="location.href='/'" class="button1">الرايات</button>
-        <button onclick="location.href='/duties/before.html'" class="button1">الواجبات العامة</button>
+        <button onclick="location.href='/kamcplatform/index.html'" class="button1">الإسعافات الأولية</button>
+        <button onclick="location.href='/kamcplatform/index.html'" class="button1">الرايات</button>
+        <button onclick="location.href='/kamcplatform/duties/before.html'" class="button1">الواجبات العامة</button>
     </div>
     <br>
     <br>
