--- a/duties/bylevels.html
+++ b/duties/bylevels.html
@@ -304,11 +304,12 @@ br {
       flex-wrap: wrap;
       justify-content: center;
       gap: 10px;
+      flex-direction: row-reverse;
   }
 
   .level-buttons button {
-      background-color: #fff;
-      color: #780606;
+      background-color: #780606;
+      color: #fff;
       border: none;
       padding: 10px 20px;
       font-size: 16px;
@@ -318,7 +319,7 @@ br {
   }
 
   .level-buttons button:hover {
-      background-color: #f0f0f0;
+      background-color: #fff;
   }
 
   .tasks-container {
