--- a/duties/bystation.html
+++ b/duties/bystation.html
@@ -323,6 +323,7 @@ br {
       flex-wrap: wrap;
       justify-content: center;
       gap: 10px;
+      flex-direction: row-reverse;
   }
 
   .station-buttons button {
