--- a/duties/before.html
+++ b/duties/before.html
@@ -30,7 +30,7 @@
           </li>
         </ul>
         
-        <img onclick="location.href='/'" src="/kamcplatform/assets/logo.png" class="logo"></img>
+        <img onclick="location.href='/kamcplatform/'" src="/kamcplatform/assets/logo.png" class="logo"></img>
       </nav>
 
     </header>
