--- a/duties/bylevels.html
+++ b/duties/bylevels.html
@@ -29,7 +29,7 @@
             <a href="/kamcplatform/about/">عن المشروع</a>
           </li>
         </ul>
-        <img onclick="location.href='/'" src="/kamcplatform/assets/logo.png" class="logo"></img>
+        <img onclick="location.href='/kamcplatform/'" src="/kamcplatform/assets/logo.png" class="logo"></img>
       </nav>
 
     </header>
