--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         <button onclick="location.href='/kamcplatform/duties/before.html'" class="button1">الواجبات العامة</button>
         <button onclick="location.href='/kamcplatform/index.html'" class="button1">الإسعافات الأولية</button>
         <button onclick="location.href='/kamcplatform/index.html'" class="button1">الرايات</button>
+        <button onclick="location.href='/kamcplatform/profile'" class="button1">الملف الشخصي</button>
     </div>
     <br>
     <br>
